--- a/src/scss/utilities/_mixins.scss
+++ b/src/scss/utilities/_mixins.scss
@@ -19,17 +19,17 @@
     @media only screen and (min-width: 1200px) {
       @content;
     }
-  } @else if($min_width != 0 and $max_width !=0) {
+  } @else if($min_width != 0 or $max_width !=0) {
     @if ($max_width != 0 and $min_width == 0) {
-      @media (max-width: $max_width) {
+      @media (max-width: "#{$max_width}px") {
         @content;
       }
     } @else if($max_width == 0 and $min_width != 0) {
-      @media (min-width: $min_width) {
+      @media (min-width: "#{$min_width}px") {
         @content;
       }
     } @else {
-      @media (min-width: $min_width) and (max-width: $max_width) {
+      @media (min-width: "#{$min_width}px") and (max-width: "#{$max_width}px") {
         @content;
       }
     }
